--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,5 +71,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
     implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation 'com.facebook.android:facebook-login:latest.release'
     
 }
