--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.2
   google_sign_in: ^6.1.4
+  flutter_facebook_auth: ^6.0.0
+  package_info_plus: ^4.0.2
+  cloud_firestore: ^4.8.4
 
 dev_dependencies:
   flutter_test:
