--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_facebook_auth: ^6.0.0
   package_info_plus: ^4.0.2
   cloud_firestore: ^4.8.4
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
