--- a/the_movie/pubspec.yaml
+++ b/the_movie/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.1.4
   package_info_plus: ^4.0.2
   flutter_bloc: ^8.1.3
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
