--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_remote_config: ^4.2.4
   firebase_analytics: ^10.4.4
   email_validator: ^2.1.17
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
