--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  tmdb_api:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,6 +47,8 @@ dependencies:
   firebase_analytics: ^10.4.4
   email_validator: ^2.1.17
   dio: ^5.3.2
+  http: ^1.1.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
